<resources>
    <string name="app_name">School Hour Tracker</string>
    <string name="edit_className">Enter Class Name</string>
    <string name="edit_classCode">Enter Class Code</string>
    <string name="btn_addClass">Add Class</string>
    <string name="tv_ClassList">List of Classes</string>
    <string name="btn_PauseTime">Pause Time</string>
    <string name="btn_StartTime">Start Time</string>
    <string name="tv_classCode_lbl">Class Code:</string>
    <string name="tv_class_info">Class Information</string>
    <string name="tv_class_name_lbl">Class Name:</string>
    <string name="lbl_decision">What Task Would You Like to Perform?</string>
    <string name="btn_manage">Manage Class</string>
    <string name="btn_record_time">Record Hours</string>
    <string name="btn_update">Update Class</string>
    <string name="btn_delete">Delete Class</string>
    <string name="btn_ResetTime">Reset TIme</string>
    <string name="btn_SaveTime">Save Time</string>
    <string name="btn_Report">Generate Report</string>
    <string name="btn_get_report">Generate Study Report</string>
    <string name="edit_start_date">Enter Report Start Date</string>
    <string name="edit_end_date">Enter Report End Date</string>
    <string name="tv_study_detail">What Task Would You Love to Do?</string>
    <string name="btn_view">View</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_del">Delete</string>
    <string name="lbl_study_date">Study Date:</string>
    <string name="lbl_start_time">Start Time:</string>
    <string name="lbl_time_ended">End Time:</string>
    <string name="lbl_time_spend">Time Spend plus Break(s):</string>
    <string name="lbl_actual_time">Time Spend minus Breaks(s):</string>
    <string name="edit_time_spend">Enter Time Spend</string>
    <string name="btn_update_time">Update</string>
</resources>
