<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/class_list"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical">

    <EditText
        android:id="@+id/txtClassName"
        android:layout_width="387dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:autofillHints="@string/edit_className"
        android:ems="10"
        android:hint="@string/edit_className"
        android:inputType="textPersonName"
        android:textColor="#000000" />

    <LinearLayout
        android:id="@+id/contentPanel"
        android:layout_width="386dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtClassName"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <EditText
            android:id="@+id/txtClassCode"
            android:layout_width="210dp"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_weight="2"
            android:autofillHints="@string/edit_classCode"
            android:hint="@string/edit_classCode"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnAddClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:text="@string/btn_addClass" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvClassList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contentPanel"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:text="@string/tv_ClassList"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/lvClassList"
        android:layout_width="wrap_content"
        android:layout_height="550dp"
        android:layout_below="@id/tvClassList"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp" />

</RelativeLayout>